<resources>
    <string name="app_name">Corona Reminder</string>
    <string name="corona_logo">CORONA</string>
    <string name="reminder_logo">Reminder</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">signin</string>
    <string name="create_acc_text">Dont have an account?</string>
    <string name="sign_in_error">Error on Sign in</string>
    <string name="create_an_account">Create an Account</string>
    <string name="full_name_hint">Full Name</string>
    <string name="register_user_error">Error on register!</string>
    <string name="all_the_world">All the world</string>
    <string name="change_country">Change</string>
    <string name="see_more_about_country">See more</string>
    <string name="try_again">Try Again</string>
    <string name="going_somewhere_hint">Going somewhere?</string>
    <string name="create">Create</string>
    <string name="reminder_created">Reminder created!</string>
    <string name="error_on_create_reminder">Error on create reminder</string>
    <string name="title_detail">You going to %1$s?</string>
    <string name="error_parse">ERROR ON PARSE DATA</string>
    <string name="dashboard_menu">Dashboard</string>
    <string name="create_menu">Create</string>
    <string name="history_menu">History</string>
    <string name="logout_menu">Logout</string>
    <string name="calendar_circle_shape_description">calendar circle shape</string>
    <string name="calendar_icon_description">calendar icon</string>
    <string name="google_icon_for_sign_in_with_google_description">google icon for sign in with google</string>
    <string name="covid_recommendation_use_mask_description">covid recommendation use mask</string>
    <string name="covid_recommendation_clean_disinfect_description">covid recommendation clean disinfect</string>
    <string name="covid_recommendation_wash_hands_description">covid recommendation wash hands</string>
    <string name="covid_recomendation_keep_distance_description">covid recomendation keep distance</string>
    <string name="covid_recommendation_avoid_touching_description">covid recommendation avoid touching</string>
    <string name="covid_recommendation_stay_home_if_seek_description">covid recommendation stay home if seek</string>
    <string name="refer_api">Corona virus data is used from <a href="https://github.com/M-Media-Group/Covid-19-API">this</a> Api</string>
    <string name="corona_stats_label">CORONA STATS</string>
    <string name="confirmed_cases">Confirmed cases</string>
    <string name="recovered_cases">Recovered cases</string>
    <string name="fatal_cases">Fatal cases</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="about_api">About API</string>
    <string name="reset_password_title">Reset password</string>
    <string name="email_forgot_hint">Insert email</string>
    <string name="message_reset_password_success">Email to reset password sended</string>
    <string name="message_reset_password_fail">Error sending reset password</string>
</resources>