<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="title"
          type="String" />
        <variable
            name="timestamp"
            type="Long" />
    </data>
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layoutDescription="@xml/activity_reminder_detail_scene">

        <TextView
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_detail_height"
            android:gravity="center"
            android:text="@{title}"
            android:textColor="@color/primary_text_color"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeMaxTextSize="26sp"
            app:autoSizeStepGranularity="4sp"
            />

        <TextView
            android:id="@+id/reminder_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color"
            app:timestamp_to_date="@{timestamp}"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/first_tooltip"
            android:layout_width="@dimen/tooltip_size"
            android:layout_height="@dimen/tooltip_size"
            app:srcCompat="@drawable/covid1"
            android:contentDescription="@string/covid_recommendation_use_mask_description" />

        <ImageView
            android:id="@+id/second_tooltip"
            android:layout_width="@dimen/tooltip_size"
            android:layout_height="@dimen/tooltip_size"
            app:srcCompat="@drawable/covid2"
            android:contentDescription="@string/covid_recommendation_clean_disinfect_description" />

        <ImageView
            android:id="@+id/third_tooltip"
            android:layout_width="@dimen/tooltip_size"
            android:layout_height="@dimen/tooltip_size"
            app:srcCompat="@drawable/covid3"
            android:contentDescription="@string/covid_recommendation_wash_hands_description" />

        <ImageView
            android:id="@+id/fourth_tooltip"
            android:layout_width="@dimen/tooltip_size"
            android:layout_height="@dimen/tooltip_size"
            app:srcCompat="@drawable/covid4"
            android:contentDescription="@string/covid_recomendation_keep_distance_description" />

        <ImageView
            android:id="@+id/fifth_tooltip"
            android:layout_width="@dimen/tooltip_size"
            android:layout_height="@dimen/tooltip_size"
            app:srcCompat="@drawable/covid5"
            android:contentDescription="@string/covid_recommendation_avoid_touching_description" />

        <ImageView
            android:id="@+id/sixth_tooltip"
            android:layout_width="@dimen/tooltip_size"
            android:layout_height="@dimen/tooltip_size"
            app:srcCompat="@drawable/covid6"
            android:contentDescription="@string/covid_recommendation_stay_home_if_seek_description" />
        
        <Button
            android:id="@+id/button_finalize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            style="@style/ButtonStyle"
            android:layout_margin="@dimen/margin_finalize_detail_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>


