<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.theusmadev.coronareminder.ui.signup.SignUpViewModel" />

        <variable
            name="loadingStatus"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/create_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textSize="32sp"
            android:textColor="#3A3A3A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".2" />

        <EditText
            android:id="@+id/input_full_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/full_name_hint"
            style="@style/InputTeste"
            android:paddingStart="8dp"
            android:inputType="textPersonName"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintVertical_bias=".1"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
            app:layout_constraintTop_toBottomOf="@+id/create_account_label" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            style="@style/InputTeste"
            android:paddingStart="8dp"
            android:text="@={viewModel.emailRegister}"
            android:inputType="textEmailAddress"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintVertical_bias=".05"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
            app:layout_constraintTop_toBottomOf="@+id/input_full_name" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Password"
            style="@style/InputTeste"
            android:paddingStart="8dp"
            android:text="@={viewModel.passwordRegister}"
            android:inputType="textPassword"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintVertical_bias=".05"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/opacity_white_color"
            android:textColor="@color/teal_200"
            android:text="CREATE"
            android:onClick="@{() -> viewModel.checkToCreate()}"
            app:layout_constraintBottom_toBottomOf="parent" />

        <include
            layout="@layout/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{loadingStatus ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

